# DangIt

./: .gitignore  CMakeLists.txt  README.md  element_simplifier.cpp  headers.h  main.cpp  opcodes.cpp  scriptParser.cpp  script_parser.cpp
